--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ buildscript {
 
 dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
+    // https://mvnrepository.com/artifact/org.spockframework/spock-core
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
+
     def tomcatVersion = '7.0.11'
 
     providedCompile "org.apache.tomcat:tomcat-servlet-api:${tomcatVersion}"
