--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'tomcat'
+apply plugin: 'groovy'
 
 sourceCompatibility = 1.7
 version = '1.0'
@@ -41,6 +42,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     // https://mvnrepository.com/artifact/org.spockframework/spock-core
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
+    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
 
     def tomcatVersion = '7.0.11'
 
