--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     // https://mvnrepository.com/artifact/org.spockframework/spock-core
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
-    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
+// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
 
     def tomcatVersion = '7.0.11'
 
